2005-02-22  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/syscall.h (l4_strerror): Drop superfluous const from the
	pointer return value.
	* l4/syscall.h (_L4_strerror): Likewise.
	Submitted by Dawid Gajownik <gajownik@gmail.com>.
	
2005-02-21  Marcus Brinkmann  <marcus@gnu.org>

	* tests/t-l4-kip.c (test_page_info): Add checks for minimum page
	size and the trunc/round/ptoa/atop functions.
	(test_memory_info): New function.
	(test): Invoke test_memory_info.

2005-02-18  Marcus Brinkmann  <marcus@gnu.org>

	Everywhere: Add support for disabling/enabling testing individual
	interfaces, including the internal interface.
	* README: New file.

	* tests/t-l4-kip.c (test_utcb_info): New function.
	(test_boot_info): Likewise.
	(test_clock_info): Likewise.
	(test_kip_area_info): Likewise.
	(test_thread_info): Likewise.
	(test_syscalls): Likewise.
	(test): Call test_utcb_info, test_clock_info, test_kip_area_info,
	test_thread_info, test_boot_info and test_syscalls.
	(test_processor_info): Test the RAW member of an L4_ProcDesc_t.
	(test_magic): Also check L4_GetKernelInterface.

2005-02-15  Marcus Brinkmann  <marcus@gnu.org>

	* ia32/l4/bits/vregs.h (_L4_utcb) [_L4_TEST_ENVIRONMENT]: Use
	_L4_TEST_UTCB_IMPL instead real implementation.
	* tests/Makefile.am (TESTS): Add l4-message.
	* tests/t-l4-message.c: New file.
	* tests/environment.h: Include stdio.h.
	(getenv): Define prototype (can't include stdlib.h, urgs).
	(environment_utcb, environment_utcb_address): New global
	variables.
	(_L4_TEST_UTCB_IMPL): New macro.
	(environment_init): Parse arguments and TESTOPTS environment
	variable.
	(vebose): Rename to ...
	(opt_verbose): ... this and initialize to 0.
	(keep_going): Rename to ...
	(keep_going): ... this and initialize to 0.

2005-02-10  Marcus Brinkmann  <marcus@gnu.org>

	* tests/environment.h: Insert a second processor and adjust
	descriptor offsets.
	(check): Print newline after error.
	(check_nr): New macro.
	* tests/t-l4-kip.c: Include <string.h> and <stddef.h>.